<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings"> </string>
	<string name="servicesscrollheader1">Services</string>
	<string name="servicesscrollheader2">Cuts</string>
	<string name="servicesscrollheader3">Others</string>
	<string name="services">Services</string>
	<string name="hours">Hours</string>
	<string name="directions">Directions</string>
	<string name="e4a">Email\nKelsey</string>
	<string name="cal">Set Appt</string>
	<string name="app_name">STUDIO4</string>
	<string name="dayssince">999</string>
    <string name="dateoflasthaircut">12/12/14</string>
	<string name="ck">Call\nKelsey</string>
	<string name="ak">About Kelsey</string>
	<string name="gallery">Gallery</string>
	<string name="dayssince2">Days since your last visit on</string>
	<string name="dayssince3">visit on</string>
	<string name="loading_empty">no data</string>
    <string name="services_and_treatments">services</string>

	<string name="login_success_message">Login successful! This concludes an example.</string>
	<string name="login_text">Log in</string>
	<string name="logout_text">Log out</string>
    <string name="register_text">Register</string>
	<string name="restore_link">restore</string>
	<string name="password_recovered_message">We sent an email to your email address with a link to a password change page. Please check your email and follow the link for further instructions.</string>
	<string name="restore_password_page_name">Password Restoration</string>
	<string name="registration_page_name">Registration</string>
	<string name="login_prompt">Login:</string>
	<string name="password_prompt">Password:</string>
	<string name="password_recovery_page_name">Password Recovery</string>
	<string name="warning_icon_description">warning icon</string>
	<string name="remember_login_text">Remember me</string>
    <string name="deviceID_field_prompt">DeviceID:</string>
    <string name="email_field_prompt">Email:</string>
    <string name="gender_field_prompt">Gender:</string>
    <string name="name_field_prompt">Name:</string>
    <string name="password_field_prompt">Password:</string>
    <string name="default_registered_text">Registered successfully!</string>
    <string name="registration_success_message">Thank you for registering with the %1$s. Click the button below to proceed to the login.</string>
	<string name="you_are_logged_in">you are logged in</string>
	<string name="register">register</string>
	<string name="login">LOGIN</string>

	<string-array name="booleans">
        <item></item>
        <item>true</item>
        <item>false</item>
    </string-array>



</resources>