<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/dp16"
              android:paddingRight="@dimen/dp16"
              android:background="@drawable/wallpaperblackconcreteshort">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dp4"
            android:text="@string/login"
            android:textSize="@dimen/text_large"
            android:textColor="@color/LightBlue"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">


    <TextView
        android:layout_width="100dp"
        android:layout_height="@dimen/dp48"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/login_prompt"
        android:textSize="16sp"
        android:textColor="@color/LightBlue"

        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>

        <EditText
            android:id="@+id/identityField"
            android:layout_width="200dp"
            android:layout_height="@dimen/dp48"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="text"
            android:textSize="@dimen/text_medium"
            android:background="@color/LightBlue"
            android:layout_marginLeft="@dimen/dp4"
            android:layout_marginRight="@dimen/dp4"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            />

    </LinearLayout>

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

    <TextView
        android:layout_width="100dp"
        android:layout_height="@dimen/dp48"
        android:layout_marginRight="@dimen/dp4"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/password_prompt"
        android:textSize="16sp"
        android:textColor="@color/LightBlue"

        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="200dp"
        android:layout_height="@dimen/dp48"
        android:layout_marginLeft="@dimen/dp4"
        android:layout_marginRight="@dimen/dp4"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="textPassword"
        android:singleLine="false"
        android:textSize="@dimen/text_medium"
        android:background="@color/LightBlue"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        />

</LinearLayout>

    <CheckBox
        android:id="@+id/rememberLoginBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_login_text"
        android:background="@color/LightBlue"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"/>

    <TextView
            android:id="@+id/restoreLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/restore_link"
            android:textColor="@color/LightBlue"
            android:textSize="@dimen/text_medium"
            android:layout_gravity="center_horizontal"/>

    <TextView
            android:id="@+id/registerLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:linksClickable="false"
            android:singleLine="false"
            android:text="@string/register"
            android:textColor="@color/LightBlue"
            android:textSize="@dimen/text_medium"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/dp144"
            android:layout_height="@dimen/dp48"
            android:text="@string/login_text"
            android:textSize="@dimen/text_medium"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/LightBlue"
            android:background="@color/Black"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|right" />



</LinearLayout>