<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/dp16"
              android:paddingRight="@dimen/dp16"
              android:background="@drawable/wallpaperblackconcreteshort">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dp4"
            android:minHeight="@dimen/dp48">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_large" android:layout_marginRight="@dimen/dp4"
            android:textColor="@color/LightBlue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_password_page_name"
            android:textSize="@dimen/text_large" android:layout_marginLeft="@dimen/dp4"
            android:textColor="@color/LightBlue"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:gravity="center"
            android:layout_marginTop="@dimen/dp4">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:gravity="center"
                android:layout_marginBottom="@dimen/dp4">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_prompt"
                android:id="@+id/textView2" android:textSize="@dimen/text_medium"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_vertical|right"
                android:textColor="@color/LightBlue"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp48"
                android:id="@+id/loginField" android:layout_marginLeft="@dimen/dp4"
                android:textSize="@dimen/text_medium"
                android:background="@color/White"/>
        </LinearLayout>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:text="Restore Password"
                android:id="@+id/restorePasswordButton"
                android:layout_marginTop="@dimen/dp4"
                android:textSize="@dimen/text_medium"/>
    </LinearLayout>
</LinearLayout>
                