<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/wallpaperblackconcreteshort"
              android:orientation="vertical"
              android:padding="20dp"
              tools:context="comapps.kelseyhaircutholliday.app.MainActivity">

    <TableRow
        android:id="@+id/row0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/dayssince2"
            android:textColor="@color/Ivory"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            />


    </TableRow>

    <TableRow
        android:id="@+id/row0b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">


        <TextView
            android:id="@+id/dateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/dateoflasthaircut"
            android:textColor="@color/Ivory"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>
    </TableRow>

    <TableRow
        android:id="@+id/row0c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/textViewSetDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/dayssince"
            android:textColor="@color/LightBlue"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            />

    </TableRow>

    <TableRow
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/hoursbutton"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/hoursofoperation"
            android:onClick="hours"
            android:textColor="@color/LightBlue"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/servicesbutton"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/servicesbutton1bw"
            android:onClick="services"
            android:textColor="@color/LightBlue"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </TableRow>

    <TableRow
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/setapptbutton"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/calendar2"
            android:onClick="setevent"
            android:textColor="@color/LightBlue"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/gallerybutton"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/galleryicon3"
            android:onClick="photogallery"

            android:textColor="@color/LightBlue"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </TableRow>

    <TableRow
        android:id="@+id/row4"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/akbutton"
            style="@android:style/ButtonBar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/khappointmentbutton"
            android:gravity="center_horizontal"
            android:onClick="aboutkelsey2"
            android:textColor="@color/LightBlue"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </TableRow>
</LinearLayout>


